feat: auth log module
